fix index brand part css overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,7 @@ main{
     justify-content: space-around;
     align-items: center;
     background-color: #FCFCFD ;
+    overflow: hidden;
 }
 .brand .brand-border{
     flex: 1;
